[package]
name = "kappa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path="src/main.rs"
name="kappa"

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["multipart"]}
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "any", "postgres","uuid"] }
dotenv = "0.15.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
http = "1.0.0"
tower = "0.4.13"
zip = "0.6.6"
async-std = "1.12.0"
bollard = "0.16.1"
tar = "0.4.40"
bytes = "1.6.0"
