[package]
name = "kappa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path="src/main.rs"
name="kappa"

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.5", features = ["multipart", "macros"]}
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full", "macros", "rt"] }
tower-http = { version = "0.5.1", features = ["trace", "fs"] }
tracing = {version= "0.1.40", features=["log", "attributes"]}
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "any", "postgres","uuid"] }
dotenv = "0.15.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
http = "1.0.0"
tower = "0.4.13"
zip = "0.6.6"
async-std = "1.12.0"
bollard = "0.16.1"
tar = "0.4.40"
bytes = "1.6.0"
reqwest = {version= "0.12.4", features = ["stream", "json"]}
hyper = {version="1.3.1", features=["full", "client"]}
body = "0.1.1"
hyper-util = { version = "0.1.3", features = ["full"] }
serde_qs = "0.13.0"
backtrace = "0.3.71"
thiserror = "1.0.61"
rand = "0.8.5"
log = "0.4.21"
mime = "0.3.17"
axum-test = "14.9.1"
lazy_static = "1.4.0"
